--- a/resources/scss/components/_mixins.scss
+++ b/resources/scss/components/_mixins.scss
@@ -1,14 +1,36 @@
 @mixin button($background, $fontColor) {
     background-color: $background;
-    padding: calc($gap/2) $gap;
+    padding: 0 1.5*$gap;
+    height: 40px;
+    display: flex;
+    width: max-content;
+    align-items: center;
     color: $fontColor;
     font-weight: 600;
     border-radius: 100px;
-    border: 1px solid $background;
+    border: 2px solid $background;
     transition: all ease .2s;
 
     &:hover {
         background-color: transparent;
         color: $background;
+    }
+}
+
+@mixin container {
+    @include mobile-only {
+        width: 100%;
+        padding: 0 $gap;
+    }
+
+    @include tablet {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    @include desktop {
+        width: 1200px;
+        margin: 0 auto;
+        padding: 0 $gap;
     }
 }
