--- a/public/css/style.css
+++ b/public/css/style.css
@@ -160,86 +160,68 @@ body {
   height: 100vh;
   width: 100%;
   position: relative;
+  background: linear-gradient(-18deg, #acdfe2, #e5f5f6 80%);
 }
-.banner-background {
-  display: flex;
-  height: 85vh;
-}
-@media (max-width: 599px) {
-  .banner-background {
-    flex-direction: column;
-    align-items: center;
-    height: 100vh;
-  }
-}
-.banner-background-primary {
-  background: white;
+.banner-container {
   display: flex;
   align-items: center;
-  flex: 12;
+  height: 100%;
 }
-@media (min-width: 600px) and (max-width: 1199px) {
-  .banner-background-primary {
-    flex: 6;
-  }
-}
-@media (min-width: 1200px) {
-  .banner-background-primary {
-    padding-left: 16%;
-    flex: 4;
-  }
+.banner-container-text {
+  position: relative;
+  z-index: 1;
 }
 @media (max-width: 599px) {
-  .banner-background-primary-text {
+  .banner-container-text {
     width: 100%;
     padding: 0 15px;
   }
 }
 @media (min-width: 600px) and (max-width: 1199px) {
-  .banner-background-primary-text {
+  .banner-container-text {
     width: 90%;
     margin: 0 auto;
   }
 }
 @media (min-width: 1200px) {
-  .banner-background-primary-text {
+  .banner-container-text {
     width: 1200px;
     margin: 0 auto;
     padding: 0 15px;
   }
 }
-.banner-background-primary-text h4 {
+.banner-container-text h4 {
   margin-bottom: 0;
   font-size: 22px;
   color: #61C2C7;
 }
-.banner-background-primary-text h2 {
+.banner-container-text h2 {
   margin: 20px 0 30px;
   line-height: 1;
   color: #2E2E2E;
   font-size: 30px;
 }
 @media (min-width: 600px) and (max-width: 1199px) {
-  .banner-background-primary-text h2 {
+  .banner-container-text h2 {
     font-size: 40px;
   }
 }
 @media (min-width: 1200px) {
-  .banner-background-primary-text h2 {
+  .banner-container-text h2 {
     max-width: 70%;
     font-size: 70px;
   }
 }
-.banner-background-primary-text p {
+.banner-container-text p {
   margin-bottom: 30px;
   color: #2E2E2E;
 }
 @media (min-width: 1200px) {
-  .banner-background-primary-text p {
+  .banner-container-text p {
     max-width: 60%;
   }
 }
-.banner-background-primary-text a {
+.banner-container-text a {
   background-color: #61C2C7;
   padding: 0 22.5px;
   height: 40px;
@@ -254,17 +236,20 @@ body {
   border: 2px solid #61C2C7;
   transition: all ease 0.2s;
 }
-.banner-background-primary-text a:hover {
+.banner-container-text a:hover {
   background-color: transparent;
   color: #61C2C7;
 }
-.banner-background-secondary {
-  background: #6caaa8;
-  display: block;
-  height: 100vh;
-  width: auto;
-  flex: 1;
-  width: 100%;
+.banner-container-text:before {
+  position: absolute;
+  width: 300px;
+  left: -60px;
+  top: -60px;
+  bottom: -60px;
+  background-image: radial-gradient(#bfe6e8 3px, transparent 3px);
+  background-size: 30px 30px;
+  content: "";
+  z-index: -1;
 }
 .banner .how-it-works {
   position: absolute;
@@ -280,7 +265,8 @@ body {
   .banner .how-it-works {
     position: relative;
     background: #6caaa8;
-    padding: 0 0 20px;
+    padding: 20px 0;
+    bottom: 0;
   }
 }
 .banner .how-it-works-container {
@@ -303,7 +289,7 @@ body {
 @media (max-width: 599px) {
   .banner .how-it-works-container {
     flex-direction: column;
-    width: 60%;
+    width: 70%;
     gap: 20px;
   }
 }
