--- a/resources/scss/style.scss
+++ b/resources/scss/style.scss
@@ -24,3 +24,5 @@ body {
 @import "./components/navbar";
 @import "./components/banner";
 @import "./components/why-us";
+@import "./components/pet";
+@import "./components/blog";
