--- a/resources/scss/components/_pet.scss
+++ b/resources/scss/components/_pet.scss
@@ -6,7 +6,7 @@
     }
 
     &-container {
-        background: url('../icons/pets.png');
+        background: url('../storage/icons/pets.png');
         background-repeat: no-repeat;
         background-position: center right;
 
