--- a/resources/scss/components/_navbar.scss
+++ b/resources/scss/components/_navbar.scss
@@ -4,6 +4,7 @@
     transition: all ease .2s;
     position: fixed;
     z-index: 9;
+    top: 0;
 
     &.fixed {
         background-color: rgba(255, 255, 255, .92);
