--- a/resources/scss/components/_blog.scss
+++ b/resources/scss/components/_blog.scss
@@ -95,4 +95,299 @@
             }
         }
     }
+
+    &-section {
+        &-banner {
+            height: 400px;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            background: linear-gradient(-18deg, lighten($primary, 10%), lighten($primary, 25%) 60%);
+            position: relative;
+
+            &:before {
+                position: absolute;
+                width: 100%;
+                left: 0;
+                top: 0;
+                bottom: 0;
+                background-image: radial-gradient(lighten($primary, 25%) 3px, transparent 3px);
+                background-size: 30px 30px;
+                content: '';
+                z-index: 1;
+            }
+
+            h3 {
+                font-size: 3.5em;
+                color: white;
+                z-index: 2;
+            }
+        }
+
+        &-content {
+            @include container;
+            display: flex;
+            justify-content: space-between;
+            gap: $gap;
+            padding-top: 4*$gap !important;
+            padding-bottom: 3*$gap !important;
+            flex-direction: column;
+
+            @include desktop {
+                flex-direction: row;
+            }
+
+            .blog {
+                &-content {
+                    flex: 3;
+
+                    .no-posts {
+                        width: 100%;
+                        height: 100%;
+                        display: flex;
+                        justify-content: center;
+                        align-items: center;
+
+                        h2 {
+                            margin: 0;
+                        }
+                    }
+
+                    &-posts {
+                        display: grid;
+                        grid-template-columns: 1fr 1fr 1fr;
+                        gap: $gap;
+
+                        @include tablet {
+                            grid-template-columns: 1fr 1fr;
+                        }
+
+                        @include mobile-only {
+                            grid-template-columns: 1fr;
+                        }
+
+                        .post {
+                            max-width: 100%;
+                            border: 1px solid lightgray;
+                            color: $text;
+                            position: relative;
+                            overflow: hidden;
+                            background: white;
+                            transition: all ease .1s;
+
+                            &-image {
+                                height: 250px;
+                                overflow: hidden;
+
+                                @include desktop {
+                                    height: 200px;
+                                }
+
+                                img {
+                                    width: 100%;
+                                    height: 100%;
+                                }
+                            }
+
+                            &-text {
+                                padding: $gap;
+                                display: flex;
+                                flex-direction: column;
+                                gap: $gap;
+
+                                h4,
+                                p,
+                                a {
+                                    margin: 0;
+                                }
+
+                                h4 {
+                                    font-weight: 500;
+                                }
+
+                                p {
+                                    font-size: 0.9em;
+                                    text-align: justify;
+                                }
+
+                                &-footer {
+                                    display: flex;
+                                    justify-content: space-between;
+                                    align-content: center;
+
+                                    a {
+                                        color: $primary;
+                                        font-size: 0.9em;
+                                    }
+
+                                    small {
+                                        color: lightgray;
+                                    }
+                                }
+                            }
+                        }
+
+                    }
+                }
+
+                &-aside {
+                    flex: 1;
+
+                    &-blocks {
+                        display: grid;
+                        grid-template-columns: 1fr;
+                        gap: $gap;
+
+                        @include tablet {
+                            grid-template-columns: 1fr 1fr;
+                        }
+
+                        .block {
+                            border: 1px solid lightgray;
+                            padding: $gap;
+
+                            h5 {
+                                margin: 0;
+                                width: 100%;
+                                text-align: center;
+                                font-size: 1.1em;
+                                margin-bottom: $gap;
+                                font-weight: 600;
+                                color: $text;
+                            }
+
+                            &-search {
+                                &-form {
+                                    width: 100%;
+
+                                    &-input {
+                                        display: flex;
+                                        align-items: center;
+                                        justify-content: space-between;
+                                        padding: 5px;
+
+                                        input {
+                                            width: 100%;
+                                            padding: 10px;
+                                            background: #f5f8fa;
+                                            border: none;
+                                        }
+
+                                        button {
+                                            @include button($primary, white);
+                                            border-radius: 0;
+                                        }
+                                    }
+                                }
+                            }
+
+                            &-instagram {
+                                &-images {
+                                    display: grid;
+                                    grid-template-columns: 1fr 1fr 1fr;
+                                    gap: $gap;
+
+                                    img {
+                                        width: 100%;
+                                    }
+                                }
+                            }
+
+                            &-social {
+                                @include tablet {
+                                    display: none;
+                                }
+
+                                &-links {
+                                    display: flex;
+                                    justify-content: center;
+                                    align-items: center;
+                                    gap: $gap;
+
+                                    a {
+                                        color: $text;
+                                        width: 30px;
+                                        height: 30px;
+                                        border-radius: 100px;
+                                        display: flex;
+                                        justify-content: center;
+                                        align-items: center;
+                                        border: 1px solid lightgray;
+                                    }
+                                }
+                            }
+
+                            &-categories {
+                                &-list {
+                                    display: flex;
+                                    flex-direction: column;
+                                    padding: 0;
+                                    margin: 0;
+                                    gap: 5px;
+
+                                    li {
+                                        display: flex;
+                                        justify-content: space-between;
+                                        align-items: center;
+                                        height: 40px;
+                                        border-bottom: 1px solid lightgray;
+
+                                        &:last-child {
+                                            border-bottom-color: transparent;
+                                        }
+
+                                        p,
+                                        a {
+                                            color: $text;
+                                            margin: 0;
+                                        }
+                                    }
+                                }
+                            }
+
+                            &-feed {
+                                &-posts {
+                                    display: flex;
+                                    flex-direction: column;
+                                    padding: 0;
+                                    margin: 0;
+                                    gap: 10px;
+
+                                    li {
+                                        a {
+                                            width: 100%;
+                                            height: 70px;
+                                            display: flex;
+                                            align-items: center;
+                                            gap: 10px;
+                                            color: $text;
+
+                                            img {
+                                                max-height: 70px;
+                                                max-width: 70px;
+                                            }
+
+                                            span {
+                                                p {
+                                                    margin: 0;
+                                                    font-size: 0.9em;
+                                                    font-weight: 500;
+                                                }
+
+                                                small {
+                                                    color: lightgray;
+                                                }
+                                            }
+                                        }
+                                    }
+
+                                }
+                            }
+
+                        }
+                    }
+                }
+            }
+        }
+    }
 }
